--- a/teste.html
+++ b/teste.html
@@ -1,6 +1,7 @@
 <html>
 <head><title></title></head>
 <body bgcolor=#097888>
+  <div class="center">
 <p align=center> Letras</p><br>
 <a herf=http://www.globo.com.br> globo </a><br>
 <font face=arial size=4 color=red> Teste com a fonte</font>
