--- a/teste.html
+++ b/teste.html
@@ -1,5 +1,7 @@
 <html>
-<head><title></title></head>
+<head><title></title>
+ <link rel="stylesheet" type="text/css" href="estilo.css">
+</head>
 <body bgcolor=#097888>
   <div class="center">
 <p align=center> Letras</p><br>
