--- a/teste.html
+++ b/teste.html
@@ -10,6 +10,6 @@
 <table width=80% border color=blue>
 <tr><td>A</td><td>B</td><td>C</td><td>D</td></tr>
 <tr><td>A</td><td>B</td><td>C</td><td>D</td></tr>
-</table><h1> Oscar<qh1</h1>
+</table><h1> Oscar</h1>
 </body>
 </html>
