--- a/teste.html
+++ b/teste.html
@@ -8,8 +8,8 @@
 <a herf=http://www.globo.com.br> globo </a><br>
 <font face=arial size=4 color=red> Teste com a fonte</font>
 <table width=80% border color=blue>
-<tr><td border color="green ">A</td><td>B</td><td>C</td><td>D</td></tr>
-<tr><td>A</td><td bkgolor="tomato">B</td><td>C</td><td>D</td></tr>
+<tr><td border color="green ">A</td><td bgcolor="yellow">B</td><td>C</td><td>D</td></tr>
+<tr><td>A</td><td bgcolor="tomato">B</td><td>C</td><td>D</td></tr>
 </table><h1> Oscar</h1>
 </body>
 </html>
